# unicodedata-reader

./: .gitignore  Pipfile  README.md  Taskfile.yml  UnicodeDataLoader.py  UnicodeDataParser.py  bidi_brackets.ipynb  bidi_brackets.py  precommit.sh  pyproject.toml  tox.ini  unidata.py
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
js/: GeneralCategory.js  LineBreak.html  LineBreak.js  line_break.html  template.js  u_line_break.html  u_line_break.js
src/unicodedata_reader/: __init__.py  __main__.py  bidi_brackets.py  cli.py  compressor.py  east_asian_width.py  east_asian_width_common.py  emoji.py  entry.py  general_category.py  line_break.py  reader.py  set.py  vertical_orientation.py
tests/: cli_test.py  conftest.py  entry_test.py  line_break_test.py  reader_test.py  set_test.py  test_unicodeparser.py  unicodeparser_test.py
unicodedata_parser/: __init__.py  bidi_brackets.py  cli_utils.py  compressor.py  emoji.py  encodings.py  line_break.py  unicodedata_parser.py  vertical_orientation.py
unicodedata_reader/: __init__.py  __main__.py  cli.py  cli_utils.py  compressor.py  emoji.py  encodings.py  entry.py  general_category.py  line_break.py  reader.py  set.py  vertical_orientation.py
