[project]
name = "unicodedata-reader"
# version = "1.3.6"
dynamic = ["version"]
description = ""
authors = [{name = "Koji Ishii", email="kojii@chromium.org"}]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = [
    "platformdirs>=4.3.8",
]

[project.urls]
repository = "https://github.com/kojiishi/unicodedata-reader"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytype>=2024.9.13",
    "tox>=4.25.0",
    "tox-uv>=1.25.0",
    "yapf>=0.43.0",
]

[project.scripts]
unicodedata-reader = 'unicodedata_reader.__main__:main'

[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = "tests"

[tool.setuptools_scm]
version_file = "src/unicodedata_reader/_version.py"

[tool.yapf]
based_on_style = "pep8"
