[project]
name = "unicodedata-reader"
# version = "1.3.6"
dynamic = ["version"]
description = ""
authors = [{name = "Koji Ishii", email="kojii@chromium.org"}]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = [
    "platformdirs>=4.3.8",
]

[project.urls]
repository = "https://github.com/kojiishi/unicodedata-reader"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytype>=2024.9.13",
    "ruff>=0.11.10",
    "tox>=4.25.0",
    "tox-uv>=1.25.0",
    "yapf>=0.43.0",
]

[project.scripts]
unicodedata-reader = 'unicodedata_reader.__main__:main'

[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
ignore = [
    "F403", # `from ... import *` used; unable to detect undefined names
    "F405", # `...` may be undefined, or defined from star imports
]

[tool.pytest.ini_options]
testpaths = "tests"

[tool.setuptools_scm]
version_file = "src/unicodedata_reader/_version.py"

[tool.uv]
# https://docs.astral.sh/uv/concepts/cache/#dynamic-metadata
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true } }]

[tool.yapf]
based_on_style = "pep8"
